# hytale-server-portal

./: .gitignore  DOCUMENTATION_INDEX.md  MIGRATION_COMPLETE.md  QUICK_BUILD.md  QUICK_INSTALL.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_ES.md  SESSION_FIXES_SUMMARY.md  SESSION_TESTING.md  SETUP_AMD.md  START_HERE.md  TESTING_GUIDE.md  TEST_COMMANDS.md  WINDOWS_BUILD_FIX.md  WINDOWS_COMPATIBILITY.md  dev.sh  package.json  setup-amd.bat  setup-amd.sh  tsconfig.json  webpack.main.js  webpack.preload.js  webpack.renderer.js
HytaleServer/: start-server.sh  stop-server.bat
resources/HytaleServer/: start-server.bat  start-server.sh  stop-server.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: auth.rs  backup.rs  config.rs  discord.rs  download.rs  files.rs  mod.rs  remote.rs  server.rs
src-tauri/src/services/: auth_service.rs  mod.rs  server_service.rs
src-tauri/src/utils/: mod.rs
src/api/: tauri-shim.ts  tauri.ts
src/main/: RemoteSocketServer.ts  index.ts
src/preload/: preload.ts
src/renderer/: App.tsx  index.html  index.tsx
src/renderer/components/: BackupPanel.css  BackupPanel.tsx  ConfigPanel.css  ConfigPanel.tsx  DiscordPanel.css  DiscordPanel.tsx  DownloadManager.css  DownloadManager.tsx  FileManager.css  FileManager.tsx  LanguageSelector.tsx  LocalAccountSetup.tsx  LoginForm.tsx  RegisterForm.tsx  RemoteAccessPanel.css  RemoteAccessPanel.tsx  RemoteLoginForm.css  RemoteLoginForm.tsx  ServerControlPanel.css  ServerControlPanel.tsx
src/renderer/pages/: AuthPage.css  AuthPage.tsx  MainPage.css  (+1 more)
src/types/: crypto-js.d.ts
webportal/: .auth-secure  electron-builder-config.json  electron-builder.yml  install-dependencies.js  linux-post-install.sh  macos-post-install.sh  main.js  nsis-post-install.nsh  package.json  preload.js  server.js  setup-config.json
webportal/assets/: uninstaller.nsh
webportal/public/: app.js  i18n-loader.js  i18n.js  index.html  styles.css
(+26 files in other folders)
